--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,3 +3,14 @@
 
 # dependencies
 /node_modules
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
