--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "ether.js": "^1.0.0",
     "express": "^4.18.2",
     "hardhat": "^2.12.4"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0"
   }
 }
